# vaulthalla-core

./: .clang-format  .gitignore  CONTRIBUTING.md  DISTRIBUTION.md  LICENSE  LICENSE.md  Makefile  NOTICE  README.md  TRADEMARKS.md  ai.yml  cli_main.cpp  conanfile.py  install  main.cpp  meson.build  meson.options  next.config.ts  package.json  pnpm-lock.yaml  requirements.txt  version.cpp
.codex/: README.md
client/: package-lock.json  package.json
core/: meson.build
core/deploy/path/: paths.h.in
core/include/auth/session/: Manager.hpp
core/include/concurrency/: AsyncService.hpp  ThreadPool.hpp  ThreadPoolManager.hpp
core/include/config/: Config.hpp  config_yaml.hpp
core/include/db/: DBConnection.hpp
core/include/db/encoding/: timestamp.hpp
core/include/db/query/share/: EmailChallenge.hpp  Stats.hpp
core/include/db/query/stats/: DbStats.hpp  OperationStats.hpp  RetentionStats.hpp  Snapshot.hpp
core/include/db/query/sync/: Operation.hpp  Stats.hpp
core/include/db/query/vault/: Activity.hpp  Recovery.hpp  Security.hpp
core/include/fs/ops/: file.hpp
core/include/fuse/task/: Request.hpp
core/include/preview/thumbnail/task/: Generate.hpp
core/include/protocols/: ProtocolService.hpp
core/include/protocols/http/: Router.hpp
core/include/protocols/shell/: ExecResult.hpp  Server.hpp
core/include/protocols/shell/commands/: all.hpp  router.hpp
core/include/protocols/ws/: ConnectionLifecycleManager.hpp  Handler.hpp  Router.hpp  Session.hpp
core/include/protocols/ws/handler/: Stats.hpp
core/include/protocols/ws/handler/fs/: Upload.hpp
core/include/protocols/ws/handler/share/: Filesystem.hpp  Links.hpp  Upload.hpp
core/include/rbac/: Actor.hpp
core/include/rbac/fs/policy/: Evaluator.hpp  Share.hpp
core/include/rbac/permission/: Selector.hpp
core/include/runtime/: Deps.hpp  Manager.hpp
core/include/share/: EmailChallenge.hpp  Manager.hpp  Principal.hpp  PrincipalResolver.hpp  Scope.hpp  TargetResolver.hpp
core/include/stats/: SnapshotService.hpp
core/include/stats/model/: ConnectionStats.hpp  DashboardOverview.hpp  DbStats.hpp  FuseStats.hpp  OperationStats.hpp  RetentionStats.hpp  StatsTrends.hpp  StorageBackendStats.hpp  SystemHealth.hpp  ThreadPoolStats.hpp  VaultActivity.hpp  VaultRecovery.hpp  VaultSecurity.hpp  VaultShareStats.hpp  VaultSyncHealth.hpp
core/include/vault/model/: Vault.hpp
core/main/: cli.cpp
core/src/auth/session/: Manager.cpp
core/src/concurrency/: AsyncService.cpp  ThreadPool.cpp
core/src/config/: Config.cpp
core/src/crypto/secrets/: TPMKeyProvider.cpp
core/src/crypto/util/: encrypt.cpp
core/src/db/: Connection.cpp
core/src/db/preparedStatements/fs/: files.cpp
core/src/db/preparedStatements/share/: emailChallenges.cpp  stats.cpp
core/src/db/preparedStatements/stats/: dbStats.cpp  operationStats.cpp  retentionStats.cpp  snapshot.cpp
core/src/db/preparedStatements/sync/: operations.cpp  stats.cpp
core/src/db/preparedStatements/vault/: activity.cpp  recovery.cpp  security.cpp
core/src/db/query/crypto/: Secret.cpp
core/src/db/query/fs/: Cache.cpp  Directory.cpp  Entry.cpp  File.cpp
core/src/db/query/identities/: Group.cpp  User.cpp
core/src/db/query/rbac/: Permission.cpp
core/src/db/query/rbac/permission/: Override.cpp
core/src/db/query/rbac/role/: Admin.cpp
core/src/db/query/rbac/role/vault/: Global.cpp
core/src/db/query/share/: EmailChallenge.cpp  Link.cpp  Session.cpp  Stats.cpp
core/src/db/query/stats/: DbStats.cpp  OperationStats.cpp  RetentionStats.cpp  Snapshot.cpp
core/src/db/query/sync/: Event.cpp  Operation.cpp  Stats.cpp
core/src/db/query/vault/: APIKey.cpp  Activity.cpp  Key.cpp  Recovery.cpp  Security.cpp  Vault.cpp  Waiver.cpp
core/src/fs/file/: ops.cpp
core/src/fuse/: Bridge.cpp  Service.cpp
core/src/protocols/: ProtocolService.cpp
core/src/protocols/http/: Router.cpp
core/src/protocols/http/handler/preview/: Image.cpp  Pdf.cpp
core/src/protocols/shell/: Router.cpp  Server.cpp
core/src/protocols/shell/commands/: all.cpp  setup.cpp  system.cpp  teardown.cpp
core/src/protocols/shell/commands/setup/: db.cpp  nginx.cpp  router.cpp
core/src/protocols/shell/commands/vault/: create.cpp  listinfo.cpp  role.cpp
core/src/protocols/shell/util/: argsHelpers.cpp
core/src/protocols/ws/: ConnectionLifecycleManager.cpp  Handler.cpp  Router.cpp  Session.cpp
core/src/protocols/ws/handler/: Settings.cpp  Stats.cpp
core/src/protocols/ws/handler/fs/: Storage.cpp  Upload.cpp
core/src/protocols/ws/handler/share/: Filesystem.cpp  Links.cpp  Sessions.cpp  Upload.cpp
core/src/rbac/: Actor.cpp
core/src/rbac/fs/policy/: Evaluator.cpp  Share.cpp
core/src/runtime/: Deps.cpp  Manager.cpp
core/src/share/: Manager.cpp  Principal.cpp  PrincipalResolver.cpp  Scope.cpp  TargetResolver.cpp  Token.cpp
core/src/stats/: SnapshotService.cpp
core/src/stats/model/: ConnectionStats.cpp  DashboardOverview.cpp  DbStats.cpp  FuseStats.cpp  OperationStats.cpp  RetentionStats.cpp  StatsTrends.cpp  StorageBackendStats.cpp  SystemHealth.cpp  ThreadPoolStats.cpp  VaultActivity.cpp  VaultRecovery.cpp  VaultSecurity.cpp  VaultShareStats.cpp  VaultSyncHealth.cpp
core/src/sync/: Controller.cpp
core/src/sync/model/: Operation.cpp
core/src/vault/model/: Vault.cpp
core/tests/integrations/: main.cpp
core/tests/integrations/include/fuse/: helpers.hpp
core/tests/integrations/src/builders/: VaultCommandBuilder.cpp
core/tests/unit/: gtest_main.cpp  test_Path.cpp  test_http_share_preview.cpp  test_share_domain.cpp  test_share_fs_resolution.cpp  test_share_manager.cpp  test_share_principal_rbac.cpp  test_share_queries.cpp  test_ws_share_fs.cpp  test_ws_share_links.cpp  test_ws_share_sessions.cpp  test_ws_share_upload.cpp
core/usage/include/: usages.hpp
core/usage/src/: UsageManager.cpp
core/usage/src/usages/: setup.cpp  system.cpp  teardown.cpp
debian/: README  README.Debian  README.source  changelog  config  control  copyright  copyright_human.txt  dirs  install  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst  postinst.ex  postrm  prerm  (+11 more)
(+2176 files in other folders)
