project('vaulthalla', 'cpp',
        version: '1.0.3',
        license: 'AGPL-3.0-or-later',
        default_options: [
            'warning_level=3',
            'werror=false',
            'cpp_std=c++23',
            'unity=on',
            'unity_size=9',
            'prefix=/usr',
            'cpp_args=-D_GLIBCXX_USE_CXX11_ABI=1'
        ]
)

subdir('core')
