option(
    'systemd_system_unit_dir',
    type: 'string',
    value: '/lib/systemd/system',
    description: 'Directory for systemd service files'
)

option('manpage', type: 'boolean', value: true, description: 'Build and install manpage via pandoc')

option(
    'install_data',
    type: 'boolean',
    value: true,
    description: 'Install data files (e.g. systemd unit files, manpage, etc.)'
)

option(
    'build_unit_tests',
    type: 'boolean',
    value: false,
    description: 'Build all unit test executables'
)

option(
    'integration_tests',
    type: 'boolean',
    value: false,
    description: 'Build integration test executable'
)

option(
    'permission_export_tests',
    type: 'boolean',
    value: false,
    description: 'Build permission export test executable'
)

option(
    'build_glob_path_tests',
    type: 'boolean',
    value: false,
    description: 'Build glob path test executable'
)
